client/src/styles/CustomisedStyle.css
/* ... */
.Renewalbtn:hover {
  background-color: #000000;
}
.tenantEditSave {
  background-color: #095a4a;
  margin-left: 400px;
  width: 150px;
  height: 50px;
  color: white;
}
.tenantEditSave:hover {
  background-color: black;
}
.addicon {
  border-color: rgb(255, 255, 255);
  background-color: transparent;
  width: 30px;
  height: 20%;
  cursor: pointer;
}
.Uservalidation {
  color: red;
  margin-left: 450px;
}
.refresh {
  cursor: pointer;
}
.orgtable {
  margin-top: -20px;
}
#Deactiveclose {
  background-color: transparent;
  margin-left: 410px;
  margin-top: -10px;
  border-color: white;
}
#Deactiveclose:hover {
  background-color: lightgray;
  color: #0b0b0b;
}
#deactivebtn {
  width: 25%;
  border-radius: 0%;
  background-color: transparent;
  margin-top: -30px;
  border-color: #000;
  color: black;
}
#deactivebtn:hover {
  background-color: #095a4a;
  color: white;
}
.despace {
  margin-top: -20px;
}

.head {
  margin-left: 190px;
}
.mainpage {
  width: fit-content;
  display: grid;
  grid-template-columns: auto auto;
  row-gap: 1rem;
  column-gap: 3rem;
}
#buttonchanges {
  border-color: black;
  border-radius: 0%;
  width: 100px;
  height: 50px;
  padding: 5px;
  margin-left: 25px;
  background-color: transparent;
}
#buttonchanges:hover {
  background-color: #095a4a;
  color: white;
}
#buttonchanges1 {
  border-color: black;
  border-radius: 0%;
  width: 100px;
  height: 50px;
  padding: 5px;

  background-color: transparent;
}
#buttonchanges1:hover {
  background-color: #095a4a;
  color: white;
}
#TenantSettingBtn {
  background-color: transparent;
  margin-left: 450px;
  width: 110px;
  height: 40px;
  border-color: #000;
  border-radius:0%;
}
#TenantSettingBtn:hover {
  background-color: #095a4a;
  color: white;
}
#logoutbtn {
  background-color: transparent;
  width: 80px;
  height: 40px;
  border-radius: 5px;
  color: black;
  border-color: #000;
  border-radius: 0%;
}
#logoutbtn:hover {
  background-color: #095a4a;
  color: white;
}
.refreshbtnad {
  margin-left: 4000%;
  cursor: pointer;
}

.deactive {
  position: absolute;
  background-color: rgb(221, 95, 95);
  width: 12%;
  height: 6%;
  margin-top: -10px;
  margin-left: -11px;
}
.closeicon {
  cursor: pointer;
}
.loc {
  height: 20%;
}
.closeicon:hover {
  background-color: lightgray;
}
div.page-footer {
  text-align: center;
  height: 50px;
  font-size: 10px;
  opacity: 0.8;
  position: fixed;
  bottom: 0;
  width: 100%;
}

div.page-footer p {
  margin: 0;
}
.watermark {
  display: none;
  top: 50vh;
  z-index: -9;
  width: 50vw;
  page-break-after: always;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0.1;
}
.table.report-container {
  page-break-after: always;
  width: 100%;
  
}
thead.report-header {
  display: table-header-group;
}
tfoot.report-footer {
  display: table-footer-group;
}
div.footer-info,
div.page-footer {
  display: none;
  height: 60px;
}
.load {
  size: 64;
  color: green;
}
@media print {
  @page {
    size: A4;
    margin: 16mm 16mm 16mm 16mm;
  }

  .watermark {
    display: block;
    counter-increment: page;
    position: fixed;
  }
  div.page-footer,
  div.footer-info {
    display: block;
  }
}
.filtertop {
  width: 80px;
}
.refresh {
  cursor: pointer;
}
.checkbx {
  margin-left: 5px;
}
.li:hover {
  color: red;
}

div {
  border: 3px solid transparent;
  /* border:3px solid palevioletred;*/
} 
.top_menu {
  /* margin-left: -2px; */
}
.dropdown {
  width: 90%;
}
.background_image {
  /* background-color: rgba(246, 246, 244, 0.756); */
  /* background-image: url("../static/images/img2.jpg"); */
  background-repeat: no-repeat;
  position: relative;

  background-size: cover;
}
@media screen and (max-width: 420px) {
  .tenant_filter {
    width: 200%;
    height: fit-content;
  }
  .locadd{
    position:relative;
    left: 5px;
    bottom: 10px;
  }
.line{
  width: 220px;
}
.mediaprint{
  margin-left: 220px;
  margin-top: -80px;
  
  
}
.locaddedit{
  left: 5px;
    bottom: 37px;
}
  .back_fill {
    background-color: #ffffff;
    margin-bottom: -10%;
  }
  .second-level-menu {
    background-color: red;
  }
  .closeicon {
    margin-right: -80px;
  }

  .btn_more {
    border-radius: 0px;
    width: 58px;
    height: 35px;
    margin-left: 0px;
    margin-right: 3px;
    margin-top: 10px;
    margin-bottom: 3px;
    background-color: #ffffff;
  }
.renewalinput{
width: 100px;
}

  .heading_color {
    position: relative;
    font-size: larger;
    font-weight: 500;
    margin-top: -10%;
    left: 20px;
  }

  #datatable2 {
    position: relative;
    margin-top: -10%;
  }

  .locadds {
    position:relative;
    left: 10px;
    bottom: 10px;
  }
  .link_to_org {
    margin-top: -35%;
    margin-left: 90%;
  }
  .dropdown {
    width: 250px;
  }
  .modhead {
    right: 50px;
  }
  .space {
    margin-bottom: 200px;
  }
  .plusicon {
    background-color: transparent;
    position: relative;
    top: 150%;
    right: 100%;
  }
  .refreshbtn {
    position: relative;
    top: -10px;
    height: 20px;
    right: 20px;
  }
  .count {
    right: 80px;
  }
  .page {
    left: 60px;
  }
  .headinghover:hover {
    color: lightgray;
  }
  .orghea {
    font-size: medium;
    right: 50px;
    position: absolute;
    margin-top: -4%;
  }
  .edithea {
    background-color: #095a4a;
    margin-right: 60px;
  }
  .editcl {
    margin-right: 50px;
  }
  .save:hover {
    background-color: #095a4a;
  }
  .nvbar {
    margin-right: 15px;
  }
  .table-responsive {
    width: 100%;
  }
  .table {
    display: block;
  
  }

  .tenantfilter {
    display: flex;
  }
}
.hwhite {
  background-color: white;
  height: 20px;
  width: 160px;
}
.dno {
  display: inline-block;

}
.dnoscroll{
  overflow-x: scroll;
  max-width:100px;
}
/* .back_image {
  background-image: url("../static/images/img2.jpg");

} */
/* .select {
} */

.tenant_add {
  display: grid;
  grid-template-columns: auto auto auto;
}
/* #tenantAddr {
  margin-left: 0%;
  width: 165%;
} */
/* ... */

